--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.mine.demomvvm">
+    package="com.mine.demomvvm">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.dashboard.DashBoardActivity">
-        </activity>
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".view.fragment.login.Test"></activity>
+        <activity android:name=".view.activity.dashboard.DashBoardActivity"></activity>
         <activity
-                android:name=".view.activity.login.LoginActivity"
-                android:windowSoftInputMode="adjustPan">
-        </activity>
-        <activity android:name=".view.activity.BaseActivity">
-        </activity>
-        <activity android:name=".view.activity.home.HomeActivity">
-        </activity>
+            android:name=".view.activity.login.LoginActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".view.activity.BaseActivity"></activity>
+        <activity android:name=".view.activity.home.HomeActivity"></activity>
         <activity android:name=".view.activity.splash.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
